/*
    protobuff IDL
    1、protoc命令 把protoc文件中的IDL 转换成编程语言
        protoc --java_out /xxx/xxx /xxx/xxx.pro
    2、 实战中使用maven插件  把protoc文件中的IDL 转换成编程语言
*/

syntax = "proto3";
// 与java语言相关的语法
option java_multiple_files = false;
option java_package = "com.yang";
option java_outer_classname = "HelloProto";

message HelloRequest{
    string name = 1;
}
message HelloResponse{
    string result = 1;
}

message HelloRequest1{
    repeated string name = 1;
}
message HelloResponse1{
    string result = 1;
}

service HelloService{
    rpc hello(HelloRequest) returns (HelloResponse){}  // 一元RPC
    rpc hello1(HelloRequest1) returns (HelloResponse1){}

    rpc c2ss(HelloRequest) returns(stream HelloResponse){} // 服务端流式RPC

    rpc cs2s(stream HelloRequest) returns(HelloResponse){} // 客户端 流式RPC

    rpc allStream(stream HelloRequest) returns(stream HelloResponse){}
}